WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28033
Win DRT is missing implementations for some resource load delegate callbacks
https://bugs.webkit.org/show_bug.cgi?id=28033
Summary
Win DRT is missing implementations for some resource load delegate callbacks
Brady Eidson
Reported
2009-08-05 16:23:06 PDT
Win DRT is missing implementations for some resource load delegate callbacks. Has been tracked in radar by <
rdar://problem/7102793
>
Attachments
didReceiveResponse (other missing ones can come later)
(11.62 KB, patch)
2009-08-05 16:34 PDT
,
Brady Eidson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2009-08-05 16:34:53 PDT
Created
attachment 34191
[details]
didReceiveResponse (other missing ones can come later)
Darin Adler
Comment 2
2009-08-05 16:38:04 PDT
Comment on
attachment 34191
[details]
didReceiveResponse (other missing ones can come later) Can't we use smart pointers for the BSTR? r=me
Brady Eidson
Comment 3
2009-08-05 16:43:46 PDT
I don't think we use any sort of BSTR smart pointer anywhere else in WinDRT - Do we have one available? I know that - at least at one time - there wasn't one available. Thanks for the review! Sending LayoutTests/ChangeLog Sending LayoutTests/platform/win/Skipped Deleting LayoutTests/platform/win/http/tests/security Sending WebKitTools/ChangeLog Sending WebKitTools/DumpRenderTree/win/ResourceLoadDelegate.cpp Sending WebKitTools/DumpRenderTree/win/ResourceLoadDelegate.h Transmitting file data ..... Committed revision 46820.
Brady Eidson
Comment 4
2009-08-05 18:31:10 PDT
Darin reviewed this in person. Added 3 more missing methods, and removed a skipped test. Sending LayoutTests/ChangeLog Sending LayoutTests/platform/win/Skipped Sending WebKitTools/ChangeLog Sending WebKitTools/DumpRenderTree/win/FrameLoadDelegate.cpp Sending WebKitTools/DumpRenderTree/win/FrameLoadDelegate.h Transmitting file data ..... Committed revision 46824. Maybe we should leave this bugzilla open as there are still many missing delegate methods. Maybe some other tests on the skipped list are related.
Darin Fisher (:fishd, Google)
Comment 5
2009-08-05 21:53:21 PDT
Looks like this can be closed as FIXED.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug