WebKitTools: 2009-08-05  Brady Eidson  <beidson@apple.com>

Reviewed by Darin Adler.

        Win DRT's resource load delegate is missing didReceiveResponse
        https://bugs.webkit.org/show_bug.cgi?id=28033

        * DumpRenderTree/win/ResourceLoadDelegate.cpp:
        (ResourceLoadDelegate::didReceiveResponse):
        * DumpRenderTree/win/ResourceLoadDelegate.h:
LayoutTests:
2009-08-05  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Win DRT's resource load delegate is missing didReceiveResponse
        https://bugs.webkit.org/show_bug.cgi?id=28033

        * platform/win/Skipped: Remove a test that now passes

        Remove platform specific results for the XFrameOptions suite which now matches cross platform results:
        * platform/win/http/tests/security: Removed.
        * platform/win/http/tests/security/XFrameOptions: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-in-body-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-allow-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-deny-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-allow-expected.txt: Removed.



Canonical link: https://commits.webkit.org/38426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46820 268f45cc-cd09-0410-ab3c-d52691b4dbfc