WebKitTools/DumpRenderTree/win/ResourceLoadDelegate.h
@@ -72,7 +72,7 @@ public:
         /* [in] */ IWebView *webView,
         /* [in] */ unsigned long identifier,
         /* [in] */ IWebURLResponse *response,
-        /* [in] */ IWebDataSource *dataSource) { return E_NOTIMPL; }
+        /* [in] */ IWebDataSource *dataSource);
         
     virtual HRESULT STDMETHODCALLTYPE didReceiveContentLength( 
         /* [in] */ IWebView *webView,
